--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head>
     <!-- jQuery, jQuery.ui -->
     <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery.min.js"></script>
@@ -12,7 +11,6 @@
 
     <!-- React -->
     <script src="https://fb.me/react-0.13.3.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script> -->
 
     <!--Custom Styles -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -20,6 +18,8 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="built/Note.js" type="text/javascript" ></script>
+    <script src="built/Note.js"></script>
+    <script src="build/Board.js"></script>
+    <script src="build/main.js"></script>
 </body>
 </html>
